[package]
name = "bankid"
version = "0.1.0"
edition = "2021"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rocket = { version = "0.5.0-rc.1", optional = true }
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
doc-comment = "0.3"